2011-11-18 No'am Rosenthal  <noam.rosenthal@nokia.com>

        WebKit2: Enable serializing of data types needed for cross-process accelerated compositing
        https://bugs.webkit.org/show_bug.cgi?id=61694

        Add an ArgumentCoder for KeyframeValueList, and modify the TimingFunction ArgumentCoder to
        allow encoding const TimingFunctions and not just RefPtr<TimingFunction>.

        Reviewed by Simon Hausmann.

        * Scripts/webkit2/messages.py:
        * Shared/WebCoreArgumentCoders.cpp:
        (CoreIPC::::encode):
        (CoreIPC::::decode):
        * Shared/WebCoreArgumentCoders.h:

2011-11-18  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        [Qt] Guard for the viewportInteractionEngine as it doesn't always exist.

        Reviewed by Antonio Gomes.

        The engine is non-existent when the view is configured to use desktop
        behavior.

        * UIProcess/qt/QtWebPageProxy.cpp:
        (QtWebPageProxy::handleWheelEvent):
        (QtWebPageProxy::didFindZoomableArea):

2011-11-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Send DidCreateDestination to DownloadProxy when destination has been created
        https://bugs.webkit.org/show_bug.cgi?id=72724

        Reviewed by Martin Robinson.

        * WebProcess/Downloads/soup/DownloadSoup.cpp:
        (WebKit::DownloadClient::didReceiveResponse): Call
        didCreateDestination() when destination URI has been successfully
        created.

2011-11-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Cancel current download operation before download object is deleted
        https://bugs.webkit.org/show_bug.cgi?id=72721

        Reviewed by Martin Robinson.

        It fixes a crash in the web process when a download finishes early
        due to a failure.

        * WebProcess/Downloads/soup/DownloadSoup.cpp:
        (WebKit::Download::cancel): Delete current ResourceHandle.
        (WebKit::Download::platformInvalidate): If there's a